--- a/client/views/dashboard/dashboard_list.html
+++ b/client/views/dashboard/dashboard_list.html
@@ -1,4 +1,4 @@
-<template name="dashboardList">
+<template name="board">
     <div class="content">
         <h3>Dashboard</h3>
         <div class="well-white">
