--- a/client/views/dashboard/board.html
+++ b/client/views/dashboard/board.html
@@ -4,7 +4,7 @@
         <div class="well-white">
             <legend>
                 Your projects
-                <a href="{{pathFor 'dashboardNew'}}" class="btn btn-primary pull-right">New Project</a>
+                <a href="{{pathFor 'board_new'}}" class="btn btn-primary pull-right">New Project</a>
             </legend>
             <table class="table table-condensed">
                 <thead>
