--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -1,9 +1,7 @@
 <template name="footer">
- <footer class="container">
-  <div class="row">
-   <div class="span12">
-    © 2015 - Easy Canvas. All rights reserved.
-   </div>
+ <footer>
+  <div class="container">
+   <p class="text-muted">© 2015 - Easy Canvas. All rights reserved.</p>
   </div>
  </footer>
 </template>
