--- a/client/views/header.html
+++ b/client/views/header.html
@@ -1,10 +1,15 @@
 <template name="header">
  <header>
-  <nav class="navbar navbar-inverse navbar-static-top">
-   <div class="navbar-inner">
-
+  <nav class="navbar navbar-default navbar-fixed-top">
+   <div class="container">
     <div class="navbar-header">
-     <a href="{{pathFor route='home'}}" class="navbar-brand">EASY DASHBOARD</a>
+     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+     </button>
+     <a class="navbar-brand" href="{{pathFor route='home'}}">Easy Dashboard</a>
     </div>
     <div class="navbar-collapse collapse">
      <ul class="nav navbar-nav navbar-right">
