--- a/client/stylesheets/footer.css
+++ b/client/stylesheets/footer.css
@@ -5,6 +5,7 @@ footer {
     /* Set the fixed height of the footer here */
     height: 60px;
     background-color: #f5f5f5;
+    border: 1px solid #e7e7e7;
 }
 
 footer > .container {
