--- a/client/views/dashboard/board.html
+++ b/client/views/dashboard/board.html
@@ -1,28 +1,39 @@
 <template name="board">
-    <div class="content">
-        <h3>Dashboard</h3>
-        <div class="well-white">
-            <legend>
-                Your projects
-                <a href="{{pathFor 'board_new'}}" class="btn btn-primary pull-right">New Project</a>
-            </legend>
-            <table class="table table-condensed">
-                <thead>
-                    <tr>
-                        <th>Canvas Name</th>
-                        <th>Designed for</th>
-                        <th>Designed by</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-                <tbody>
-                    <tr>
-                        <td><a href="/boards/1X?locale=en">Untitled Board</a></td>
-                        <td><a href="/boards/1X?locale=en">/boards/1X?locale=en</a></td>
-                        <td><a href="/boards/1X?locale=en">/boards/1X?locale=en</a></td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="board">
+        <div class="container">
+            <div class="well-white">
+                <legend>
+                    Your projects
+                    <a href="{{pathFor 'board_new'}}" class="btn btn-primary pull-right">New Project</a>
+                </legend>
+                <table class="table table-condensed">
+                    <thead>
+                        <tr>
+                            <th>Canvas Name</th>
+                            <th>Designed for</th>
+                            <th>Designed by</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                    <tbody>
+                        <tr>
+                            <td><a href="/boards/1X?locale=en">Untitled Board</a></td>
+                            <td><a href="/boards/1X?locale=en">/boards/1X?locale=en</a></td>
+                            <td><a href="/boards/1X?locale=en">/boards/1X?locale=en</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="/boards/20?locale=en">Untitled Board</a></td>
+                            <td><a href="/boards/20?locale=en">/boards/20?locale=en</a></td>
+                            <td><a href="/boards/20?locale=en">/boards/20?locale=en</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="/boards/23?locale=en">Untitled Board</a></td>
+                            <td><a href="/boards/23?locale=en">/boards/23?locale=en</a></td>
+                            <td><a href="/boards/23?locale=en">/boards/23?locale=en</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </template>
