--- a/client/views/dashboard/board_new.html
+++ b/client/views/dashboard/board_new.html
@@ -1,21 +1,37 @@
 <template name="board_new">
-    <div class="row">
-        <div class="col-sm-12">
-            <form class="form-horizontal">
-                <fieldset>
-                    <legend>novo post</legend>
-                    <div class="row">
-                        <div class="col-sm-9">
-                            <textarea rows="2"></textarea>
-                        </div>
-                        <div class="col-sm-1">
-                            <button class="btn btn-lg">
-                                Publicar
-                            </button>
-                        </div>
+    <div class="board_new">
+        <div class="container">
+            <div class="well-white">
+                <legend>
+                    New projects
+                </legend>
+
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
                     </div>
-                </fieldset>
-            </form>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputFile">File input</label>
+                        <input type="file" id="exampleInputFile">
+                        <p class="help-block">Example block-level help text here.</p>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+                <div class="controlbar">
+                    <a href="{{pathFor 'board_new'}}" class="btn btn-primary pull-right">Create</a>
+                    <a href="{{pathFor 'board_new'}}" class="btn btn-primary pull-right">Close</a>
+                </div>
+            </div>
         </div>
     </div>
 </template>
