--- a/client/stylesheets/board.css
+++ b/client/stylesheets/board.css
@@ -2,6 +2,9 @@
     min-height: 20px;
     padding: 12px;
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
     background-color: #ffffff;
     border: 1px solid #e3e3e3;
     -webkit-border-radius: 4px;
