--- a/client/views/board/board_list.html
+++ b/client/views/board/board_list.html
@@ -1,15 +1,15 @@
-<template name="board">
-    <div class="board">
+<template name="board_list">
+    <div class="board_list">
         <div class="container">
             <div class="well-white">
                 <legend>
-                    Your projects
-                    <a href="{{pathFor 'board_new'}}" class="btn btn-primary pull-right">New Project</a>
+                    Your boards
+                    <a href="{{pathFor 'board_new'}}" class="btn btn-primary pull-right">New Bord</a>
                 </legend>
                 <table class="table table-condensed">
                     <thead>
                         <tr>
-                            <th>Canvas Name</th>
+                            <th>Board Name</th>
                             <th>Designed for</th>
                             <th>Designed by</th>
                         </tr>
