--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -1,7 +1,7 @@
 <template name="footer">
  <footer>
   <div class="container">
-   <p class="text-muted">© 2015 - Easy Canvas. All rights reserved.</p>
+   <p class="text-muted">© 2015 - Easy Board. All rights reserved.</p>
   </div>
  </footer>
 </template>
