--- a/client/views/header.html
+++ b/client/views/header.html
@@ -1,7 +1,6 @@
 <template name="header">
  <header>
   <nav class="navbar navbar-default navbar-fixed-top">
-   <div class="container">
     <div class="navbar-header">
      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
       <span class="sr-only">Toggle navigation</span>
@@ -9,14 +8,13 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
      </button>
-     <a class="navbar-brand" href="{{pathFor route='home'}}">Easy Board</a>
+     <a class="navbar-brand" href="{{pathFor route='board_list'}}">Easy Board</a>
     </div>
     <div class="navbar-collapse collapse">
      <ul class="nav navbar-nav navbar-right">
       {{> loginButtons}}
      </ul>
     </div>
-   </div>
   </nav>
  </header>
 </template>
