--- a/client/stylesheets/board.css
+++ b/client/stylesheets/board.css
@@ -41,3 +41,124 @@
     border-radius: 5px;
     margin-left: 3px;
 }
+
+.board .header-story {
+    position: relative;
+}
+
+.board .header-story .btn-new-story {
+    padding: 0;
+    color: #337AB4;
+    border-style: none;
+    font-weight: bold;
+    position: absolute;
+    font-size: 10px;
+    bottom: 2px;
+    right: 5px;
+}
+
+.board .board-column {
+    width: 20%;
+    height: 1px;
+    padding: 0 !important;
+}
+
+.board .board-column .story-container {
+    height: 100%;
+    padding: 5px 5px 0 5px;
+}
+
+.board .board-column .story-container .story-name {
+    text-align: center;
+    background-color: #ADADAD;
+    font-size: 14px;
+    font-weight: bold;
+    position: relative;
+    border: 1px solid #989898;
+    height: 100%;
+    padding: 16px 5px 5px 5px;
+}
+
+.board .board-column .story-container .btn {
+    padding: 0;
+    font-size: 12px;
+    color: #337AB4;
+    border-style: none;
+    font-weight: bold;
+    position: absolute;
+}
+
+.board .board-column .story-container .btn-new-task {
+    font-size: 10px;
+    top: 3px;
+    left: 5px;
+}
+
+.board .board-column .story-container .btn-delete-story {
+    top: 2px;
+    right: 3px;
+}
+
+.board .board-column .board-container {
+    height: 100%;
+    min-height: 50px;
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
+.board .board-column .board-container .task {
+    border: 1px solid rgb(238, 239, 233);
+    border-radius: 3px;
+    background-color: #FBFBD5;
+    width: 120px;
+    float: left;
+    margin-bottom: 5px;
+    margin-right: 5px;
+}
+
+.board .board-column .board-container .task .task-move {
+    background-color: blue;
+    height: 10px;
+    cursor: move;
+    background-color: rgba(158, 158, 158, 0.31);
+}
+
+.board .board-column .board-container .task .task-move .btn-delete-task {
+    padding: 0;
+    font-size: 10px;
+    color: #9E9127;
+    border-style: none;
+    margin-top: -2px;
+    margin-right: 1px;
+    font-weight: bold;
+}
+
+.board .board-column .board-container .task .task-content {
+    padding: 3px;
+}
+
+.board .board-column .board-container .task .task-content .task-description {
+    min-height: 50px;
+    font-size: 12px;
+    font-family: cursive;
+    font-weight: bold;
+}
+
+.board .board-column .board-container .task .task-content .task-footer {
+    height: 8px;
+    font-size: 9px;
+    font-family: cursive;
+    color: rgba(134, 134, 4, 0.88);
+}
+
+.board .board-column .board-container .task .task-content .task-footer .task-assignment {
+    float: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100px;
+}
+
+.board .board-column .board-container .task .task-content .task-footer .task-point {
+    float: right;
+}
