--- a/client/stylesheets/footer.css
+++ b/client/stylesheets/footer.css
@@ -8,12 +8,12 @@ footer {
     border: 1px solid #e7e7e7;
 }
 
-footer > .container {
+.footer-container {
     padding-right: 15px;
     padding-left: 15px;
 }
 
-footer > .container .text-muted {
+.footer-container .text-muted {
     margin: 20px 0;
     font-size: 11px;
 }
