--- a/client/views/board/board_list.html
+++ b/client/views/board/board_list.html
@@ -1,39 +1,29 @@
 <template name="board_list">
     <div class="board_list">
-        <div class="container">
             <div class="well-white">
                 <legend>
                     Your boards
                     <a href="{{pathFor 'board_new'}}" class="btn btn-primary pull-right">New Bord</a>
                 </legend>
+
                 <table class="table table-condensed">
                     <thead>
                         <tr>
-                            <th>Board Name</th>
+                            <th>Name</th>
+                            <th>Type</th>
                             <th>Designed for</th>
-                            <th>Designed by</th>
                         </tr>
                     </thead>
-                    <tbody></tbody>
                     <tbody>
+                        {{#each boards}}
                         <tr>
-                            <td><a href="/boards/1X?locale=en">Untitled Board</a></td>
-                            <td><a href="/boards/1X?locale=en">/boards/1X?locale=en</a></td>
-                            <td><a href="/boards/1X?locale=en">/boards/1X?locale=en</a></td>
+                            <td><a href="{{pathFor 'board'}}">{{name}}</a></td>
+                            <td><a href="{{pathFor 'board'}}">{{{typeBoardLabel type}}}</a></td>
+                            <td><a href="{{pathFor 'board'}}">{{userName}}</a></td>
                         </tr>
-                        <tr>
-                            <td><a href="/boards/20?locale=en">Untitled Board</a></td>
-                            <td><a href="/boards/20?locale=en">/boards/20?locale=en</a></td>
-                            <td><a href="/boards/20?locale=en">/boards/20?locale=en</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="/boards/23?locale=en">Untitled Board</a></td>
-                            <td><a href="/boards/23?locale=en">/boards/23?locale=en</a></td>
-                            <td><a href="/boards/23?locale=en">/boards/23?locale=en</a></td>
-                        </tr>
+                        {{/each}}
                     </tbody>
                 </table>
             </div>
-        </div>
     </div>
 </template>
