--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -1,6 +1,6 @@
 <template name="footer">
  <footer>
-  <div class="container">
+  <div class="footer-container">
    <p class="text-muted">© 2015 - Easy Board. All rights reserved.</p>
   </div>
  </footer>
