--- a/client/views/board/board_new.html
+++ b/client/views/board/board_new.html
@@ -10,11 +10,11 @@
                 <form>
                     <div class="form-group">
                         <label for="nameBoard">Name</label>
-                        <input class="form-control" id="nameBoard" placeholder="Name">
+                        <input class="form-control" id="boardName" placeholder="Name">
                     </div>
                     <div class="form-group">
-                        <label for="typeBoard">Type</label>
-                        <select class="form-control" id="typeBoard">
+                        <label for="boardType">Type</label>
+                        <select class="form-control" id="boardType">
                             <option value="">Type</option>
                             <option value="SCRUM">Scrum</option>
                         </select>
