--- a/client/stylesheets/board.css
+++ b/client/stylesheets/board.css
@@ -79,7 +79,7 @@
     padding: 16px 5px 5px 5px;
 }
 
-.board .board-column .story-container .btn {
+.board .board-column .story-container .story-name > .btn {
     padding: 0;
     font-size: 12px;
     color: #337AB4;
@@ -88,13 +88,13 @@
     position: absolute;
 }
 
-.board .board-column .story-container .btn-new-task {
+.board .board-column .story-container .story-name .btn-new-task {
     font-size: 10px;
     top: 3px;
     left: 5px;
 }
 
-.board .board-column .story-container .btn-delete-story {
+.board .board-column .story-container .story-name .btn-delete-story {
     top: 2px;
     right: 3px;
 }
