--- a/client/views/board/board.html
+++ b/client/views/board/board.html
@@ -1,36 +1,39 @@
 <template name="board">
     <div class="board">
-        {{boardSelected.name}}
+        <legend class="view-title">
+            <div class="navbar">
+                <div class="navbar-collapse collapse pull-left">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li id="dropdown-list" class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" style="padding: 5px;">
+                                <span class="glyphicon glyphicon-align-justify" aria-hidden="true" style="font-size: 20px;"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <span class="glyphicon glyphicon-share icon-share"></span>
+                                    <a class="btn btn-share-board">Share With...</a>
+                                </li>
+                                <li>
+                                    <span class="glyphicon glyphicon-remove-circle icon-delete"></span>
+                                    <a class="btn btn-delete-board">Delete Board</a>
+                                </li>
+                                <li role="separator" class="divider"></li>
+                                <li>
+                                    <span class="glyphicon glyphicon-off icon-close"></span>
+                                    <a class="btn btn-close-board">Close Board</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <span class="title-board-name pull-left">asdasdasd</span>
+            </div>
+        </legend>
         <table class="table table-striped table-bordered board">
             <thead>
                 <tr>
                     <th class="header-story">Story
                         <a class="btn btn-new-story" data-toggle="modal" data-target=".modal-add-story">+ Add Story</a>
-                        <div class="modal fade modal-add-story" tabindex="-1" role="dialog">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title">Story</h4>
-                                    </div>
-                                    <form id="form-add-story">
-                                        <div class="modal-body">
-                                            <input class="form-control" id="storyName" placeholder="Name">
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button id="closeModal" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                            <button type="submit" class="btn btn-primary">Create</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                        <script>
-                            $('.modal-add-story').on('show.bs.modal', function(event) {
-                                var modal = $(this)
-                                modal.find('#storyName')[0].value = "";
-                            });
-                        </script>
                     </th>
                     <th>To Do</th>
                     <th>In Process</th>
@@ -39,40 +42,37 @@
                 </tr>
             </thead>
             <tbody>
-                {{#each boardSelected.listStory}}
+                {{#each storiesForBoard}}
                 <tr>
                     <td class="board-column">
                         <div class="story-container">
-                            <div class="story-name" data-story-id="{{storyId}}">{{name}}
-                                <a class="btn btn-new-task" data-toggle="modal" data-target=".modal-add-task">+ Add Task</a>
-                                <a class="btn btn-delete-story">X</a>
-                            </div>
+                            {{> board_story}}
                         </div>
                     </td>
                     <td class="board-column">
-                        <div class="board-container story{{storyId}}" data-story-id="{{storyId}}" data-state="TODO">
-                            {{#each listTask}} {{#if stateIs "TODO"}} {{> task }} {{/if}} {{/each}}
+                        <div class="board-container story{{_id}}" data-story-id="{{_id}}" data-state="TODO">
+                            {{#each listTask}} {{#if stateIs "TODO"}} {{> board_task }} {{/if}} {{/each}}
                         </div>
                     </td>
                     <td class="board-column">
-                        <div class="board-container story{{storyId}}" data-story-id="{{storyId}}" data-state="PROCESS">
-                            {{#each listTask}} {{#if stateIs "PROCESS"}} {{> task }} {{/if}} {{/each}}
+                        <div class="board-container story{{_id}}" data-story-id="{{_id}}" data-state="PROCESS">
+                            {{#each listTask}} {{#if stateIs "PROCESS"}} {{> board_task }} {{/if}} {{/each}}
                         </div>
                     </td>
                     <td class="board-column">
-                        <div class="board-container story{{storyId}}" data-story-id="{{storyId}}" data-state="VERIFY">
-                            {{#each listTask}} {{#if stateIs "VERIFY"}} {{> task }} {{/if}} {{/each}}
+                        <div class="board-container story{{_id}}" data-story-id="{{_id}}" data-state="VERIFY">
+                            {{#each listTask}} {{#if stateIs "VERIFY"}} {{> board_task }} {{/if}} {{/each}}
                         </div>
                     </td>
                     <td class="board-column">
-                        <div class="board-container story{{storyId}}" data-story-id="{{storyId}}" data-state="DONE">
-                            {{#each listTask}} {{#if stateIs "DONE"}} {{> task }} {{/if}} {{/each}}
+                        <div class="board-container story{{_id}}" data-story-id="{{_id}}" data-state="DONE">
+                            {{#each listTask}} {{#if stateIs "DONE"}} {{> board_task }} {{/if}} {{/each}}
                         </div>
                     </td>
                     <script>
                         $(function() {
-                            $(".story{{storyId}}").sortable({
-                                connectWith: ".story{{storyId}}",
+                            $(".story{{_id}}").sortable({
+                                connectWith: ".story{{_id}}",
                                 handle: ".task-move"
                             }).disableSelection();
                         });
@@ -84,50 +84,9 @@
 
     </div>
 
-    <div class="modal fade modal-add-task" tabindex="-1" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Task</h4>
-                </div>
-                <form id="form-add-task">
-                    <div class="modal-body">
-                        <input class="form-control" id="taskName" placeholder="Name">
-                        <input type="hidden" id="storyId">
-                    </div>
-                    <div class="modal-footer">
-                        <button id="closeModal" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Create</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <script>
-        $('.modal-add-task').on('show.bs.modal', function(event) {
-            var modal = $(this)
-            modal.find('#taskName')[0].value = "";
-            modal.find('#storyId')[0].value = event.relatedTarget.parentElement.dataset.storyId;
-        });
-    </script>
+   
+  {{> board_story_new}}
+  {{> board_task_new}}
 </template>
 
-<template name="task">
-    <div class="task">
-        <div class="task-move" data-story-id="{{../storyId}}" data-task-id="{{taskId}}"><a class="btn btn-delete-task pull-right">X</a></div>
-        <div class="task-content">
-            <div class="task-description">
-                <span>{{name}} </span>
-            </div>
-            <div class="task-footer">
-                <div class="task-assignment">
-                    Leonardo da Costa Cabral
-                </div>
-                <div class="task-point">
-                    8
-                </div>
-            </div>
-        </div>
-    </div>
-</template>
+
