--- a/client/views/board/board_story_new.html
+++ b/client/views/board/board_story_new.html
@@ -44,6 +44,8 @@
                 spanTitle.text("Update");
                 btnSave.text("Save");
             }
+            
+            modal.find('#storyName').focus();
         });
     </script>
 </template>
