--- a/client/views/board/board_task_new.html
+++ b/client/views/board/board_task_new.html
@@ -53,6 +53,8 @@
                 spanTitle.text("Update");
                 btnSave.text("Save");
             }
+            
+            modal.find('#taskName').focus();
         });
     </script>
 </template>
