--- a/client/views/board/board.html
+++ b/client/views/board/board.html
@@ -11,7 +11,7 @@
                             <ul class="dropdown-menu">
                                 <li>
                                     <span class="glyphicon glyphicon-share icon-share"></span>
-                                    <a class="btn btn-share-board">Share With...</a>
+                                    <a class="btn btn-share-board" data-toggle="modal" data-target=".modal-share-board">Share With...</a>
                                 </li>
                                 <li>
                                     <span class="glyphicon glyphicon-remove-circle icon-delete"></span>
@@ -26,7 +26,7 @@
                         </li>
                     </ul>
                 </div>
-                <span class="title-board-name pull-left">asdasdasd</span>
+                <span class="title-board-name pull-left">{{boardSelected.name}}</span>
             </div>
         </legend>
         <table class="table table-striped table-bordered board">
@@ -86,6 +86,7 @@
 
    
   {{> board_story_new}}
+  {{> board_share}}
   {{> board_task_new}}
 </template>
 
