--- a/client/views/board/board_share.html
+++ b/client/views/board/board_share.html
@@ -14,7 +14,7 @@
                                     <input class="form-control" id="taskName" placeholder="Description" >
                                 </th>
                                 <th class="th-bt">
-                                    <button id="closeModal" type="button" class="btn btn-primary glyphicon glyphicon-floppy-save" style="height: 35px;"></button>
+                                    <button type="button" id="btn-save-share" class="btn btn-primary glyphicon glyphicon-floppy-save" style="height: 35px;"></button>
                                 </th>
                             </tr>
                         </thead>
@@ -26,19 +26,19 @@
                                 <tr>
                                     <td><span>leoccabral@gmail.com</span> </td>
                                     <td class="td-bt">
-                                       <button id="closeModal" type="button" class="btn btn-danger glyphicon glyphicon-remove-circle"></button>
+                                       <button type="button" class="btn btn-danger glyphicon glyphicon-remove-circle"></button>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>leonardo@teste.com.br</td>
                                     <td>
-                                        <button id="closeModal" type="button" class="btn btn-danger glyphicon glyphicon-remove-circle"></button>
+                                        <button type="button" class="btn btn-danger glyphicon glyphicon-remove-circle"></button>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Clayton@gmail.com</td>
                                     <td>
-                                        <button id="closeModal" type="button" class="btn btn-danger glyphicon glyphicon-remove-circle"></button>
+                                        <button type="button" class="btn btn-danger glyphicon glyphicon-remove-circle"></button>
                                     </td>
                                 </tr>
                                 <tr>
