--- a/client/views/board/board_task.html
+++ b/client/views/board/board_task.html
@@ -1,13 +1,13 @@
 <template name="board_task">
     <div class="task">
-        <div class="task-move" data-story-id="{{../_id}}" data-task-id="{{taskId}}" data-task-name="{{name}}" data-task-assigned="{{assigned}}">
+        <div class="task-move" data-story-id="{{../_id}}" data-task-id="{{_id}}" data-task-name="{{name}}" data-task-assigned="{{assigned}}">
             <a class="glyphicon glyphicon-remove btn btn-delete-task pull-right"></a>
             <a class="glyphicon glyphicon-pencil btn btn-edit-task pull-right" data-toggle="modal" data-target=".modal-add-task"></a>
         </div>
 
         <div class="task-content">
             <div class="task-description">
-                <span>{{taskId}} {{name}} {{state}} </span>
+                <span>{{name}}</span>
             </div>
             <div class="task-footer">
                 <div class="task-assigned">
