--- a/client/stylesheets/board.css
+++ b/client/stylesheets/board.css
@@ -70,6 +70,13 @@
     color: #C1C1C1;
 }
 
+.board .view-title .dropdown-menu > li > .icon-add-story {
+    color: #4C91D2;
+    padding-left: 10px;
+    vertical-align: middle;
+    top: 0px;
+}
+
 .board .view-title .dropdown-menu > li > .icon-share {
     color: #4C91D2;
     padding-left: 10px;
@@ -97,11 +104,19 @@
     margin-top: 4px;
 }
 
-.board .header-story {
+.board .header-vertical {
+    display: none;
+}
+
+.board .header-vertical th {
+    width: 20%
+}
+
+.board .header-vertical .header-story {
     position: relative;
 }
 
-.board .header-story .btn-new-story {
+.board .header-vertical .header-story .btn-new-story {
     padding: 0;
     color: #337AB4;
     border-style: none;
@@ -112,18 +127,22 @@
     right: 5px;
 }
 
-.board .board-column {
-    width: 20%;
+.board .board-column,
+.board .story-column {
     height: 1px;
     padding: 0 !important;
 }
 
-.board .board-column .story-container {
+.board .story-column {
+    width: 20%;
+}
+
+.board .story-column .story-container {
     height: 100%;
     padding: 5px 5px 0 5px;
 }
 
-.board .board-column .story-container .story-name {
+.board .story-column .story-container .story-name {
     text-align: center;
     background-color: #ADADAD;
     font-size: 14px;
@@ -134,7 +153,7 @@
     padding: 16px 5px 5px 5px;
 }
 
-.board .board-column .story-container .story-name > .btn {
+.board .story-column .story-container .story-name > .btn {
     padding: 0;
     font-size: 12px;
     color: #337AB4;
@@ -143,29 +162,42 @@
     position: absolute;
 }
 
-.board .board-column .story-container .story-name .btn-new-task {
+.board .story-column .story-container .story-name .btn-new-task {
     font-size: 10px;
     top: 3px;
     left: 5px;
 }
 
-.board .board-column .story-container .story-name .btn-edit-story {
+.board .story-column .story-container .story-name .btn-edit-story {
     top: 2px;
     right: 19px;
     font-weight: initial;
 }
 
-.board .board-column .story-container .story-name .btn-delete-story {
+.board .story-column .story-container .story-name .btn-delete-story {
     top: 2px;
     right: 3px;
     font-weight: initial;
 }
 
+.board .board-column .header-horizontal {
+    text-align: right;
+    color: #B5B4B4;
+    margin-right: 10px;
+    margin-top: 2px;
+}
+
 .board .board-column .board-container {
-    height: 100%;
-    min-height: 50px;
-    margin-top: 5px;
-    margin-left: 5px;
+    min-height: 83px;
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-right: 0px;
+    border-color: rgb(221, 221, 221);
+    border-style: solid;
+    border-top-width: 0px;
+    border-right-width: 0px;
+    border-bottom-width: 1px;
+    border-left-width: 0px;
 }
 
 .board .board-column .board-container .task {
@@ -223,6 +255,22 @@
 
 .board .board-column .board-container .task .task-content .task-footer .task-point {
     float: right;
+}
+
+@media (min-width: 768px) {
+    .board .header-vertical {
+        display: table-header-group;
+    }
+    .board .board-column .board-container {
+        height: 100%;
+        border-top-width: 0px;
+        border-right-width: 0px;
+        border-bottom-width: 0px;
+        border-left-width: 1px;
+    }
+    .board .header-horizontal {
+        display: none;
+    }
 }
 
 .modal-share-board .modal-dialog #form-share-board > table {
