--- a/client/views/board/board.html
+++ b/client/views/board/board.html
@@ -2,13 +2,18 @@
     <div class="board">
         <legend class="view-title">
             <div class="navbar">
-                <div class="navbar-collapse collapse pull-left">
-                    <ul class="nav navbar-nav navbar-left">
+                <div class="navbar-collapse pull-left">
+                    <ul class="nav navbar-nav navbar-left" style="margin: 0;">
                         <li id="dropdown-list" class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" style="padding: 5px;">
                                 <span class="glyphicon glyphicon-align-justify" aria-hidden="true" style="font-size: 20px;"></span>
                             </a>
                             <ul class="dropdown-menu">
+                                
+                                <li>
+                                    <span class="glyphicon glyphicon-plus icon-add-story"></span>
+                                    <a class="btn btn-new-story" data-toggle="modal" data-target=".modal-add-story">Add Story</a>
+                                </li>
                                 <li>
                                     <span class="glyphicon glyphicon-share icon-share {{isOwner boardSelected.userId}}"></span>
                                     <a class="btn btn-share-board {{isOwner boardSelected.userId}}" data-toggle="modal" data-target=".modal-share-board">Share With...</a>
@@ -30,7 +35,7 @@
             </div>
         </legend>
         <table class="table table-striped table-bordered board">
-            <thead>
+            <thead class="header-vertical">
                 <tr>
                     <th class="header-story">Story
                         <a class="btn btn-new-story" data-toggle="modal" data-target=".modal-add-story">+ Add Story</a>
@@ -44,28 +49,34 @@
             <tbody>
                 {{#each storiesForBoard}}
                 <tr>
-                    <td class="board-column">
+                    <td class="story-column">
                         <div class="story-container">
                             {{> board_story}}
                         </div>
                     </td>
-                    <td class="board-column">
-                        <div class="board-container story{{_id}}" data-story-id="{{_id}}" data-state="TODO">
+                    <td class="board-column" colspan="4">
+                        <div class="header-horizontal">
+                        To Do
+                    </div>
+                        <div class="board-container story{{_id}} col-xs-12 col-sm-3" data-story-id="{{_id}}" data-state="TODO">
                             {{#each getListTask _id "TODO"}} {{> board_task }} {{/each}}
                         </div>
-                    </td>
-                    <td class="board-column">
-                        <div class="board-container story{{_id}}" data-story-id="{{_id}}" data-state="PROCESS">
+                        <div class="header-horizontal">
+                        In Process
+                    </div>
+                        <div class="board-container story{{_id}} col-xs-12 col-sm-3" data-story-id="{{_id}}" data-state="PROCESS">
                             {{#each getListTask _id "PROCESS"}} {{> board_task }} {{/each}}
                         </div>
-                    </td>
-                    <td class="board-column">
-                        <div class="board-container story{{_id}}" data-story-id="{{_id}}" data-state="VERIFY">
+                        <div class="header-horizontal">
+                        To Verify
+                    </div>
+                        <div class="board-container story{{_id}} col-xs-12 col-sm-3" data-story-id="{{_id}}" data-state="VERIFY">
                             {{#each getListTask _id "VERIFY"}} {{> board_task }} {{/each}}
                         </div>
-                    </td>
-                    <td class="board-column">
-                        <div class="board-container story{{_id}}" data-story-id="{{_id}}" data-state="DONE">
+                        <div class="header-horizontal">
+                        Done
+                    </div>
+                        <div class="board-container story{{_id}} col-xs-12 col-sm-3" data-story-id="{{_id}}" data-state="DONE">
                             {{#each getListTask _id "DONE"}} {{> board_task }} {{/each}}
                         </div>
                     </td>
